# estradiol

crates/estradiol/: Cargo.toml
crates/estradiol-soundcloud/: Cargo.toml
crates/estradiol-soundcloud/src/: client.rs  endpoints.rs  error.rs  lib.rs
crates/estradiol-soundcloud/src/models/: collections.rs  media.rs  mod.rs  resources.rs
crates/estradiol/src/: anchor_state.rs  app.rs  app_background.rs  main.rs  utils.rs
crates/estradiol/src/apps/: search.rs
